tests/baselines/reference/parserEmptyStatement1.d.errors.txt
==== tests/cases/compiler/parserEmptyStatement1.d.ts (1 errors) ====
    ;
    ~
!!! parserEmptyStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.